// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextSummary render() should bail out with empty contexts 1`] = `""`;

exports[`ContextSummary render() should render at least three contexts 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={Object {}}
    key="browser"
    unknownTitle="Unknown Browser"
  />
  <DeviceSummary
    data={
      Object {
        "arch": "x86",
        "family": "iOS",
        "model": "iPhone10,5",
        "type": "device",
      }
    }
    key="device"
  />
</div>
`;

exports[`ContextSummary render() should render nothing with a single user context 1`] = `""`;

exports[`ContextSummary render() should render nothing without contexts 1`] = `""`;

exports[`ContextSummary render() should render up to four contexts 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={
      Object {
        "name": "Chrome",
        "version": "65.0.3325",
      }
    }
    key="browser"
    unknownTitle="Unknown Browser"
  />
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <GenericSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="os"
    unknownTitle="Unknown OS"
  />
</div>
`;

exports[`ContextSummary render() should skip a missing user context 1`] = `
<div
  className="context-summary"
>
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <GenericSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="os"
    unknownTitle="Unknown OS"
  />
  <DeviceSummary
    data={
      Object {
        "arch": "x86",
        "family": "iOS",
        "model": "iPhone10,5",
        "type": "device",
      }
    }
    key="device"
  />
</div>
`;

exports[`ContextSummary render() should skip non-default named contexts 1`] = `
<div
  className="context-summary"
>
  <UserSummary
    data={
      Object {
        "email": "mail@example.org",
        "id": "1",
      }
    }
    key="user"
  />
  <GenericSummary
    data={
      Object {
        "name": "Electron",
        "type": "runtime",
        "version": "1.7.13",
      }
    }
    key="runtime"
    unknownTitle="Unknown Runtime"
  />
  <GenericSummary
    data={
      Object {
        "build": "17E199",
        "kernel_version": "17.5.0",
        "name": "Mac OS X",
        "type": "os",
        "version": "10.13.4",
      }
    }
    key="os"
    unknownTitle="Unknown OS"
  />
  <DeviceSummary
    data={
      Object {
        "arch": "x86",
        "family": "iOS",
        "model": "iPhone10,5",
        "type": "device",
      }
    }
    key="device"
  />
</div>
`;
